WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
279216
REGRESSION(
282648@main
): Speedometer 3.0 test TodoMVC-JavaScript-ES6-Webpack-Complex-DOM was regressed
https://bugs.webkit.org/show_bug.cgi?id=279216
Summary
REGRESSION(282648@main): Speedometer 3.0 test TodoMVC-JavaScript-ES6-Webpack-...
Said Abou-Hallawa
Reported
2024-09-05 12:37:42 PDT
Updating the EffectiveTextDirection needs to be optimized when inserting an Element into ancestor. What should happen regarding the text directionality if the <body> element in a large web page has this markup <body dir="ltr">? Currently and because of this statement in Element::insertedIntoAncestor(), we end up calling updateEffectiveTextDirection() for every Element when it is parsed and inserted in its ancestor tree. if (UNLIKELY(selfOrPrecedingNodesAffectDirAuto() || (parent && parent->usesEffectiveTextDirection()))) updateEffectiveTextDirection(); In this scenario we do not really need to call updateEffectiveTextDirection() unless one of the descendant has the dir attribute set.
Attachments
Add attachment
proposed patch, testcase, etc.
Said Abou-Hallawa
Comment 1
2024-09-05 12:38:14 PDT
rdar://134688490
Said Abou-Hallawa
Comment 2
2024-09-05 12:42:45 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/33204
EWS
Comment 3
2024-10-05 10:28:46 PDT
Committed
284731@main
(799cdf9de44e): <
https://commits.webkit.org/284731@main
> Reviewed commits have been landed. Closing PR #33204 and removing active labels.
EWS
Comment 4
2024-10-08 12:53:42 PDT
Committed
283286.226@safari-7620-branch
(c76d7f033d82): <
https://commits.webkit.org/283286.226@safari-7620-branch
> Reviewed commits have been landed. Closing PR #1988 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug