REGRESSION(282648@main): Speedometer 3.0 test TodoMVC-JavaScript-ES6-Webpack-Complex-DOM was regressed https://bugs.webkit.org/show_bug.cgi?id=279216 rdar://134688490

Reviewed by Ryosuke Niwa.

If an element, without children and without shadowRoot, is insertedIntoAncestor()
don't call updateEffectiveTextDirection() since it is expensive call. In this
case just, set the bit setEffectiveTextDirection(). To make this change clean,
add the new method updateEffectiveTextDirectionIfNeeded() and call it from
insertedIntoAncestor().

* Source/WebCore/dom/Element.cpp:
(WebCore::Element::updateEffectiveTextDirectionIfNeeded):
(WebCore::Element::insertedIntoAncestor):
* Source/WebCore/dom/Element.h:

Canonical link: https://commits.webkit.org/284731@main