Source/WebCore/dom/Element.cpp
@@ -2762,6 +2762,31 @@ void Element::updateEffectiveTextDirection()
     updateEffectiveTextDirectionState(*this, textDirectionState);
 }
 
+void Element::updateEffectiveTextDirectionIfNeeded()
+{
+    if (UNLIKELY(selfOrPrecedingNodesAffectDirAuto())) {
+        updateEffectiveTextDirection();
+        return;
+    }
+
+    RefPtr parent = parentOrShadowHostElement();
+    if (!(parent && parent->usesEffectiveTextDirection()))
+        return;
+
+    if (hasAttributeWithoutSynchronization(HTMLNames::dirAttr) || shadowRoot() || firstChild()) {
+        updateEffectiveTextDirection();
+        return;
+    }
+
+    if (auto* input = dynamicDowncast<HTMLInputElement>(*this); input && input->isTelephoneField()) {
+        updateEffectiveTextDirection();
+        return;
+    }
+
+    setUsesEffectiveTextDirection(parent->usesEffectiveTextDirection());
+    setEffectiveTextDirection(parent->effectiveTextDirection());
+}
+
 void Element::dirAttributeChanged(const AtomString& newValue)
 {
     auto textDirectionState = parseTextDirectionState(newValue);
@@ -2904,11 +2929,8 @@ Node::InsertedIntoAncestorResult Element::insertedIntoAncestor(InsertionType ins
     } else if (!hasLanguageAttribute())
         updateEffectiveLangStateFromParent();
 
-    if (!is<HTMLSlotElement>(*this)) {
-        RefPtr parent = parentOrShadowHostElement();
-        if (UNLIKELY(selfOrPrecedingNodesAffectDirAuto() || (parent && parent->usesEffectiveTextDirection())))
-            updateEffectiveTextDirection();
-    }
+    if (!is<HTMLSlotElement>(*this))
+        updateEffectiveTextDirectionIfNeeded();
 
     return InsertedIntoAncestorResult::Done;
 }
